force-app/main/default/objects/docuSignConf__c/docuSignConf__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Docusign Configuration</label>
</CustomObject>