force-app/main/default/objects/docuSignConf__c/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <label>Account</label>
    <length>20</length>
    <type>Text</type>
</CustomField>