force-app/main/default/objects/docuSignConf__c/fields/accountId__c.field-meta.xml
<CustomField>
    <fullName>accountId__c</fullName>
    <label>Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>