force-app/main/default/objects/docuSignConf__c/fields/integratorsKey__c.field-meta.xml
<CustomField>
    <fullName>integratorsKey__c</fullName>
    <label>Integrators Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>