force-app/main/default/objects/docuSignConf__c/fields/Password_HA__c.field-meta.xml
<CustomField>
    <fullName>Password_HA__c</fullName>
    <label>Password HA</label>
    <length>60</length>
    <type>Text</type>
</CustomField>