force-app/main/default/objects/docuSignConf__c/fields/PassWord_Pest_Control__c.field-meta.xml
<CustomField>
    <fullName>PassWord_Pest_Control__c</fullName>
    <label>PassWord Pest Control</label>
    <length>100</length>
    <type>Text</type>
</CustomField>