force-app/main/default/objects/docuSignConf__c/fields/password_PFC__c.field-meta.xml
<CustomField>
    <fullName>password_PFC__c</fullName>
    <label>password PFC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>