force-app/main/default/objects/docuSignConf__c/fields/passwordSolar__c.field-meta.xml
<CustomField>
    <fullName>passwordSolar__c</fullName>
    <label>Password Solar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>