force-app/main/default/objects/docuSignConf__c/fields/tokenPart1__c.field-meta.xml
<CustomField>
    <fullName>tokenPart1__c</fullName>
    <label>Token Part 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>