force-app/main/default/objects/docuSignConf__c/fields/tokenPart2__c.field-meta.xml
<CustomField>
    <fullName>tokenPart2__c</fullName>
    <label>Token Part 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>