force-app/main/default/objects/docuSignConf__c/fields/tokenPart3__c.field-meta.xml
<CustomField>
    <fullName>tokenPart3__c</fullName>
    <label>Token Part 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>