force-app/main/default/objects/docuSignConf__c/fields/User_Id_HA__c.field-meta.xml
<CustomField>
    <fullName>User_Id_HA__c</fullName>
    <label>User Id HA</label>
    <length>60</length>
    <type>Text</type>
</CustomField>