force-app/main/default/objects/docuSignConf__c/fields/User_Id_Pest_Control__c.field-meta.xml
<CustomField>
    <fullName>User_Id_Pest_Control__c</fullName>
    <label>User Id Pest Control</label>
    <length>100</length>
    <type>Text</type>
</CustomField>