force-app/main/default/objects/docuSignConf__c/fields/userIdSolar__c.field-meta.xml
<CustomField>
    <fullName>userIdSolar__c</fullName>
    <label>User Id Solar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>